# hayloft

./: LICENSE  README.md
app/: .gitignore  app.py  schema.py
logger/: __init__.py
pkg/: .gitignore  README.md  pyproject.toml
pkg/hayloft/: app-old.py  app.py  app2.py  cors.py  llama_index.py  logger.py  schema.py  sse.py
pkg/hayloft/public/: index.html
pkg/hayloft/public/assets/: index-0cc0a4d1.js  index-144454fa.css  index-3c19358f.js  index-448b692e.css  index-6f47c6c1.js  index-7630e259.css  index-76ea6d03.js  index-883c7b1f.css  index-889253f9.js  index-8c99cad3.js  index-ad0b845f.js  index-b19f38d7.js  index-be461c13.js  index-efbd5a31.js  index-fd5275c2.css
ui/: .gitignore  index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.json  vite.config.ts
ui/src/: hooks.ts  index.css  main.tsx
ui/src/components/App/: index.tsx  styles.css
ui/src/components/Input/: index.tsx
ui/src/components/Model/: index.tsx
ui/src/components/RecordList/: index.tsx
ui/src/components/Tab/: index.tsx
ui/src/components/Topbar/: index.tsx
ui/src/service/: agent.ts  index.ts
ui/src/store/: index.tsx  mutations.ts
ui/src/types/: app.d.ts  core.d.ts  raw.d.ts
